--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 aiogram = "^2.22.1"
 gTTS = "^2.2.4"
 pdfplumber = "^0.7.4"
+python-dotenv = "^0.21.0"
+python-docx = "^0.8.11"
 
 
 [build-system]
